--- a/HF2/package.json
+++ b/HF2/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
-    "express-session": "^1.17.0"
+    "express-session": "^1.17.0",
+    "mongoose": "^5.7.12"
   }
 }
