--- a/code/package.json
+++ b/code/package.json
@@ -15,5 +15,8 @@
     "express-session": "^1.17.0",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.12"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0"
   }
 }
